# spotify-data-reader

./: .gitignore  README.md  pyproject.toml  reader.py  time_played.py  top_artists.py  top_per_month.py  top_per_week.py  top_songs.py
MyData/: FamilyPlan.json  Follow.json  Identity.json  Payments.json  Playlist1.json  SearchQueries.json  StreamingHistory0.json  StreamingHistory1.json  StreamingHistory2.json  StreamingHistory3.json  StreamingHistory4.json  StreamingHistory5.json  StreamingHistory6.json  StreamingHistory7.json  StreamingHistory8.json  Userdata.json  YourLibrary.json
src/: classes.py  reader.py  stats.py
