[tool.poetry]
name = "spotify-data-reader"
version = "0.1.0"
description = ""
authors = ["Fede Calendino <fede@calendino.com>"]
readme = "README.md"
packages = [{include = "spotify_data_reader"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
